welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: value && is not a member of Int
  return M&&pos} 
          ^